# obot-realtime

./: CMakeLists.txt  LICENSE-subcomponents.txt  NOTICE.txt  README.md
.github/workflows/: ccpp.yml
config/: param.yaml
include/: freebot_arm_control.h  freebot_base_control.h  freebot_messages.h  obot_arm_control.h  obot_base_control.h  obot_messages.h  trajectory.h
matlab/: quadratic_positive.m  trajectory.m
src/: CMakeLists.txt  freebot-realtime.cpp  freebot-test.cpp  freebot_arm_control.cpp  freebot_arm_ik_analytic_control.cpp  freebot_arm_ik_control.cpp  freebot_arm_joint_control.cpp  freebot_base_control.cpp  obot-realtime.cpp  obot-test.cpp  obot_arm_ik_analytic_control.cpp  obot_arm_ik_control.cpp  obot_arm_joint_control.cpp  obot_base_control.cpp
test/: CMakeLists.txt  freebot_arm_ik_analytic_control_test.cpp  obot_arm_ik_analytic_control_test.cpp
